[project]
name = "ellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.43.0",
    "mypy>=1.15.0",
    "openai>=1.60.1",
    "rich>=13.9.4",
    "tiktoken>=0.8.0",
]
[tool.uv]
package = true

[project.scripts]
ellm = "ellm:main"
